# bigstac

./: .editorconfig  .gitignore  README.md
analyze/: change.py  how-to-log-in-duckdb.md  info.py  merge.py  requirments.txt  size.py  stats.py
cmr_logs_categorizer/: README.md  analysis_functions.R  batch_tables.sh  categorize_queries.Rmd  cloudwatch_s3_policy.json  count_shapefiles.sh  export_logs.sh  log_to_table.R  parsing_functions.R  sum_shapes.sh
distributed/: README.md  al2023-docker-dask.pkr.hcl  cdk_dask_sg.py  distributed_duckdb_example.ipynb  query_AWS_for_packer.py  run_packer.sh
harvester_elasticsearch/: README.md  aws_tunnel-https.zsh  es_util.py  large_coll_filter.txt  localcluster.py  requirements.txt  small_coll_filter.txt  util.py
harvester_oracle_db/: README.md  harvest_echo10_1geo_col.py  harvest_echo10_1geo_with_center.py  requirments.txt
languages/rust/geohash-depth/: .editorconfig  .gitignore  Cargo.toml  log4rs.yaml
languages/rust/geohash-depth/src/: geohash_utils.rs  main.rs  standard.rs
scripts_explore/: dgpd_bbox_clean.ipynb  duck_machine.ipynb  duckdb.ipynb  manyfiles.sh  map_geo_row_groups.ipynb  modis_stac_geoparquet.ipynb  multi.py  parquet_to_duckdb.py  prepare_spatial_data.ipynb  requirements.txt  spatial_partition.ipynb  spatial_partition_thomas.ipynb  stac_geoparquet.ipynb  stac_gpq_parquet.ipynb  write_geoparquet_projjson_metadata.py
tester/: .pylintrc  Dockerfile  README.md  benchmark_readme.md  blast.py  create_sql.py  example.json  locustfile.py  pyrightconfig.json  requirements.txt  run.duckdb.py  schema.json  (+15 more)
(+28 files in other folders)
