[package]
name = "geohash-depth"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "38.0"
parquet = "38.0"
geo = { version = "0.23"}
geo-types = "0.7"
geo-traits = "0.2.0"
num-traits = "0.2"
wkb = "0.8"
geohash = "*"
log = "*"
env_logger = "*"
log4rs = "*"

[[bin]]
name = "geohash-depth"
path = "src/main.rs"
